account deactivation link alignment fixed (#507)
deactivation link aligned in footer

alignment of deactivation link fixed

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -200,13 +200,13 @@ h5 {
   }
 
 }
-@media screen and (max-width: 395px) {
+@media screen and (max-width: 454px) {
   .settings-app {
-    height:500px;
+    height:auto;
   }
 
   .settings {
-    height:500px;
+    height:auto;
   }
 }
 
